SVCC-2298 overflow hidden added to prevent horizontal scroll

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
@@ -1,3 +1,4 @@
 .tab-bar_list-container {
   display: flex;
+  overflow: hidden;
 }
